# cracked_shell

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  missing-capabilities.md  project-plan.md
.github/workflows/: ci.yml
benches/: eval_benchmark.rs
docs/: architecture.md  lisp-reference.md
examples/sample_scripts/: fibonacci.lisp  hello.lisp  pipeline.lisp
lib/archive/: README.md
lib/include/: cracked_shell.h
lib/src/: cracked_shell.cpp
src/: builtin.rs  env.rs  error.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  value.rs
workflows/: business-idea-analyst.md  business-market-researcher.md  business-planner.md  business-product-designer.md  code-security-advisor.md  frontend-ui-validator.md  implement-plan.md  log-analyst.md  performance-tester.md  personal-workflow-analyst.md  plan-and-document.md  principal-architect.md  review-code.md  simulated-competitor.md  simulated-salesman.md  suggest-command-from-description.md  user-simulator.md
